--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,5 +65,9 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
 
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
 
 }
