--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
@@ -42,6 +43,9 @@
         <activity android:name=".WritePostActivity"
             android:exported="true"
             android:label="POST"/>
+        <activity android:name=".PopupActivity"
+            android:exported="true"
+        />
     </application>
 
 </manifest>
