--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,6 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-database:20.1.0'
     implementation 'com.google.firebase:firebase-firestore:24.4.0'
-//    implementation 'com.google.firebase:firebase-auth:21.1.0'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-storage:20.1.0'
     // Import the Firebase BoM
@@ -63,11 +62,13 @@ dependencies {
 
     // Declare the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation 'com.prolificinteractive:material-calendarview:1.4.3'
 
-    //glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    //달력
+    implementation 'com.prolificinteractive:material-calendarview:1.4.3'
+    
+
+    //차트
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 
 }
