--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:theme="@style/Theme.Food_Account"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
@@ -31,19 +31,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"
+        <activity android:name=".activities.LoginActivity"
             android:exported="true"
             android:label="LOGIN"/>
-        <activity android:name=".SignUpActivity"
+        <activity android:name=".activities.SignUpActivity"
             android:exported="true"
             android:label="SIGNUP"/>
-        <activity android:name=".InformationActivity"
+        <activity android:name=".activities.InformationActivity"
             android:exported="true"
             android:label="INFORMATION"/>
-        <activity android:name=".WritePostActivity"
+        <activity android:name=".activities.WritePostActivity"
             android:exported="true"
             android:label="POST"/>
-        <activity android:name=".PopupActivity"
+        <activity android:name=".activities.PopupActivity"
             android:exported="true"
         />
     </application>
